--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,22 +61,27 @@
                 android:orientation="vertical"
                 android:layout_margin="0dp">
 
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/tabs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp">
 
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="wrap_content"
+
+                    <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/tabs"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="NetEase" />
+                        android:layout_marginTop="10dp">
 
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="Xiami"/>
-                </com.google.android.material.tabs.TabLayout>
+<!--                        <com.google.android.material.tabs.TabItem-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:text="NetEase" />-->
+
+<!--                        <com.google.android.material.tabs.TabItem-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="match_parent"-->
+<!--                            android:text="Xiami" />-->
+                    </com.google.android.material.tabs.TabLayout>
+
+
+
     <!--            <ScrollView-->
     <!--                android:id="@+id/easeNet"-->
     <!--                android:layout_width="match_parent"-->
@@ -92,7 +97,7 @@
                 <ListView
                     android:id="@+id/music_list"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="276dp"
                     android:layout_weight="1"
                     tools:visibility="invisible" />
         </LinearLayout>
