--- a/app/src/main/res/layout/item_music.xml
+++ b/app/src/main/res/layout/item_music.xml
@@ -58,6 +58,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_weight="1"
                 android:text="Duration"
+                android:visibility="invisible"
                 android:textSize="16sp" />
             </LinearLayout>
 
