--- a/app/src/main/res/layout/player.xml
+++ b/app/src/main/res/layout/player.xml
@@ -46,12 +46,13 @@
                     app:cardCornerRadius="105dp"
                     android:layout_gravity="center"
                     >
+
                     <ImageView
+                        android:id="@+id/album"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/linkin"
                         android:scaleType="centerCrop"
-                        />
+                        android:src="@drawable/linkin" />
                 </androidx.cardview.widget.CardView>
             </androidx.cardview.widget.CardView>
 
@@ -168,7 +169,7 @@
             <ImageView
                 android:id="@+id/shuffle"
                 android:layout_width="100dp"
-                android:layout_height="29dp"
+                android:layout_height="40dp"
                 android:layout_weight="1"
                 android:src="@drawable/ic_shuffle_white_36dp" />
         </LinearLayout>
