--- a/app/src/main/res/layout/item_music.xml
+++ b/app/src/main/res/layout/item_music.xml
@@ -30,7 +30,7 @@
                     android:id="@+id/title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Music1"
+                    android:text="Music"
                     android:gravity="center_vertical"
                     android:maxLines="1"
                     android:ellipsize="end"
